fixed notes-list hr alignement to center

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -127,6 +127,7 @@ hr {
     max-width: 350px;
 }
 #notes-list hr {
+    margin: auto;
     width: 50%;
 }
 
